--- a/estilo/style.css
+++ b/estilo/style.css
@@ -82,7 +82,7 @@ header .rede-sociais a{
 	list-style-type: none;
 }
 
-.header2 li{
+.header2 li {
 	display: inline-block;
 	font-size: 15px;
 	padding-right: 20px;
@@ -101,15 +101,68 @@ header .rede-sociais a{
 	padding-right: 15px;
 }
 
+footer {
+	position: fixed;
+	padding: 2px 0;
+	background: #D98E7E;
+	width: 100%;}
 
+footer.fixed{
+	bottom: 0;	
+}
 
+footer h6{
+	padding: 10px 0;
+	font-size: 12px;
 
+}
 
+footer ul{
+	position: relative;
+	top: 3px;
+	list-style-type: none;	
+}
 
+footer li{
+ 	display: inline-block;
+	font-size: 25px;
+	padding: 0 10px;
+}
 
+footer li a{
+	color: #8C3939;
+}
 
+.mensagem-erro404 .Wrapper404{
+	transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%, -50%);
+	left: 50%;
+	text-align: center;
+	padding: 0 2%;
+	width: 100%;
+	position: absolute;
+	top: 50%;
+}
 
+.mensagem-erro404 h1{
+	font-size: 80px;
+	color: #8C3939;
+}
 
+.mensagem-erro404 h5{
+	color: #8C3939;
+	font-size: 30px;
+}
 
+.mensagem-erro404 h6{
+	padding-top: 30px;
+}
+
+.mensagem-erro404 h6 a{
+	color:  #A6415C;
+	font-size: 30px;
+	text-decoration: none;
+	list-style-type: none;
+}
 
 
