--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,7 +2,7 @@
 *{
 	margin: 0;
 	padding: 0;
-	box-sizing: borde-box;
+	box-sizing: border-box;
 	font-family: "Open Sans";
 }
 
@@ -106,7 +106,8 @@ footer {
 	position: fixed;
 	padding: 2px 0;
 	background: #D98E7E;
-	width: 100%;}
+	width: 100%;
+}
 
 footer.fixed{
 	bottom: 0;	
@@ -165,5 +166,74 @@ footer li a{
 	text-decoration: none;
 	list-style-type: none;
 }
+
+/**Home**/
+section.banner-container{
+	padding: 20px 0;
+	min-height: 600px;
+	background-image: url('../imagens/pic5.jpg');
+	width: 100%;
+	background-size: cover;
+	background-size: center;
+	position: relative;
+}
+
+.overlay{
+	top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+	position: absolute; 
+	background: rgba(0, 0, 0, 0.7);
+	z-index: 1;
+}
+
+section.banner-container .box-container{
+	position: relative;
+	max-width: 600px;
+	z-index: 2;
+}
+
+section.banner-container .logo{
+	top: 0;
+	width: 100%;
+}
+
+section.banner-container p{
+	position: relative;
+	text-align: center;
+	top: -150px;
+	font-size: 30px;
+	font-weight: 300;
+	color: white;
+}
+
+section.banner-container p:nth-of-type(1){
+	font-weight: bold;
+	color: white;
+}
+
+section.banner-container input{
+	position: relative;	
+	text-align: center;
+	padding: 10px 30px;
+	border: none;
+	font-size: 20px;
+	left: 50%;
+	top: -120px;
+	transform: translate(-50%,-50%);
+	-ms-transform:translate(-50%,-50%);
+}
+
+section.banner-container input[type=submit]{
+	background-color: #9c4b4b;
+	color: white;
+	font-weight: bold;
+}
+
+section.conteudo{
+	background: whitesmoke;
+}
+
 
 
